tests/rosetta/out/Swift/abbreviations-easy.error
run error: exit status 1
/tmp/TestMochiToSwiftabbreviations-easy2064265441/001/main.swift:3:27: error: cannot assign value of type '[Any]' to type '[String]'
  1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:24Z
  2 | func fields(_ s: String) -> [String] {
  3 |     var words: [String] = [Any]()
    |                           |- error: cannot assign value of type '[Any]' to type '[String]'
    |                           `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
  4 |     var cur = ""
  5 |     var i = 0

/tmp/TestMochiToSwiftabbreviations-easy2064265441/001/main.swift:46:29: error: cannot assign value of type '[Any]' to type '[String]'
 44 | }
 45 | func validate(_ commands: [String], _ words: [String], _ mins: [Int]) -> [String] {
 46 |     var results: [String] = [Any]()
    |                             |- error: cannot assign value of type '[Any]' to type '[String]'
    |                             `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
 47 |     if words.count == 0 {
 48 |         return results

/tmp/TestMochiToSwiftabbreviations-easy2064265441/001/main.swift:59:25: error: cannot find 'upper' in scope
 57 |             let cmd = commands[ci]
 58 |             if mins[ci] != 0 && wlen >= mins[ci] && wlen <= cmd.count {
 59 |                 let c = upper(cmd)
    |                         `- error: cannot find 'upper' in scope
 60 |                 let ww = upper(w)
 61 |                 if String(c[c.index(c.startIndex, offsetBy: 0)..<c.index(c.startIndex, offsetBy: wlen)]) == ww {

/tmp/TestMochiToSwiftabbreviations-easy2064265441/001/main.swift:60:26: error: cannot find 'upper' in scope
 58 |             if mins[ci] != 0 && wlen >= mins[ci] && wlen <= cmd.count {
 59 |                 let c = upper(cmd)
 60 |                 let ww = upper(w)
    |                          `- error: cannot find 'upper' in scope
 61 |                 if String(c[c.index(c.startIndex, offsetBy: 0)..<c.index(c.startIndex, offsetBy: wlen)]) == ww {
 62 |                     results = results + [c]

/tmp/TestMochiToSwiftabbreviations-easy2064265441/001/main.swift:79:23: error: cannot assign value of type '[Any]' to type '[Int]'
 77 |     let table = "Add ALTer  BAckup Bottom  CAppend Change SCHANGE  CInsert CLAst COMPress Copy " + "COUnt COVerlay CURsor DELete CDelete Down DUPlicate Xedit EXPand EXTract Find " + "NFind NFINDUp NFUp CFind FINdup FUp FOrward GET Help HEXType Input POWerinput " + " Join SPlit SPLTJOIN  LOAD  Locate CLocate  LOWercase UPPercase  LPrefix MACRO " + "MErge MODify MOve MSG Next Overlay PARSE PREServe PURge PUT PUTD  Query  QUIT " + "READ  RECover REFRESH RENum REPeat  Replace CReplace  RESet  RESTore  RGTLEFT " + "RIght LEft  SAVE  SET SHift SI  SORT  SOS  STAck STATus  TOP TRAnsfer TypeUp "
 78 |     let commands = fields(table)
 79 |     var mins: [Int] = [Any]()
    |                       |- error: cannot assign value of type '[Any]' to type '[Int]'
    |                       `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
 80 |     var i = 0
 81 |     while i < commands.count {
